# ros2_testing

./: README.md
fastbot/fastbot_gazebo/launch/: spawn_fastbot.launch.xml
fastbot_waypoints/: CMakeLists.txt  package.xml
fastbot_waypoints/src/: fastbot_action_server.cpp
fastbot_waypoints/test/: test_waypoints.cpp
